--- a/css/_vars.sass
+++ b/css/_vars.sass
@@ -1,2 +1,9 @@
 $titleFont: 'Oswald', sans-serif
 $textFont: 'OpenSans', sans-serif
+
+=textProperties($size, $weight, $lineHeight, $letterSpacing, $color)
+    font-size: $size
+    font-weight: $weight
+    line-height: $lineHeight
+    letter-spacing: $letterSpacing
+    color: $color
